Fixed z-index header issue

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -52,6 +52,7 @@ header div {
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     transition: 0.2s ease-in;
     width: 100%;
+    z-index: 999;
 }
 
 .scrolled span {
